2007-02-11  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc: Always use a dynamically-found port number when starting 
	self-hosting, instead of only determining it when creating the file, by using the -p and -h 
	arguments to postmaster instead of specifying the same information in a postgresql.conf file.

2007-02-11  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h: Add discover_first_free_port() helper function, based on 
	recommendation from Lennart Poettering. Use it to try a series of ports when deciding what port 
	to use for self-hosting. However, this should be tested every time we start the server, not just 
	when creating the files.

2007-02-11  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc:
	* glom/mode_data/box_data_details.h: Remove the Gtk::Paned parent widget. Its functionality 
	was not used. It was just a relic from a previous nasty UI. Replaced it with a ScrolledWindow 
	that does vertical scrolling when necessary. Hopefully this will prevent the window from sometimes 
	being too high for the screen. Layout is variable height rather than variable width, so this makes 
	sense.
	I also need to make the window take as much vertical space as it can.

2007-02-11  Murray Cumming  <murrayc@murrayc.com>

	* NEWS:
	* glom/Makefile.am:
	* glom/application.cc:
	* glom/frame_glom.cc:
	* glom/libglom/document/document_glom.cc:
	* glom/libglom/document/document_glom.h:
	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h: Added unfinished 
	code for Relationships Overview feature, by Rasmus Toftdahl Olesen.
	(See http://halfdans.net/index.py/89 )
	The actual use of goocanvas is disabled in configure.ac, frame_glom.cc, and glom/Makefile.am, 
	because the code must be updated to build against the latest goocanvas API.

1.3.7:

2007-02-07  Murray Cumming  <murrayc@murrayc.com>
